--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,12 @@
-title: powersupply
+title: Build a variable power supply
 hero_image: images/banner.png
-description: powersupply description
+description: Get electrons into your circuits with the correct energy.
 version: 4
 listed: false
 copyedit: false
 last_tested: "2018-04-16"
+site_areas: HackSpace
 steps:
   - title: Introduction
-  - title: What you will need
+  - title: Converting the voltage
   - title: Step title
