--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,5 +1,5 @@
 title: Build a variable power supply
-hero_image: images/banner.png
+hero_image: images/banner.jpg
 description: Get electrons into your circuits with the correct energy.
 version: 4
 listed: false
