--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Build a variable power supply
 hero_image: images/banner.jpg
-description: Get electrons into your circuits with the correct energy.
+description: Get electrons into your circuits with the correct energy
 version: 4
 listed: false
 copyedit: false
